add scroll buttun

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -173,3 +173,11 @@ background-color: #FFFFFF !important;
 .zoom:hover {
   transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
+
+#scroll-top-btn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 10px; /* Place the button at the bottom of the page */
+  right: 10px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+}
