--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <%= render 'layouts/flash' %>
     <%= render "layouts/navbar"%>
     <%= yield %>
+    <%= render "layouts/scroll_top_btn"%>
     <%= render "layouts/footer"%>
   </body>
 </html>
