--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,8 +1,10 @@
-commentToDeleteId = <%= @id %>;
-<% unless params[:comment_id] %>
-  proposalComment = $('tr#' + commentToDeleteId);
-  proposalComment.remove();
-<% else %>
-  proposalCommentComment = $('div#' + commentToDeleteId);
-  proposalCommentComment.remove();
-<% end %>
+$(document).ready(function() {
+  commentToDeleteId = <%= @id %>;
+  <% unless params[:comment_id] %>
+    proposalComment = $('tr#' + commentToDeleteId);
+    proposalComment.remove();
+  <% else %>
+    proposalCommentComment = $('div#' + commentToDeleteId);
+    proposalCommentComment.remove();
+  <% end %>
+});
