--- a/app/views/cities/_filter.html.erb
+++ b/app/views/cities/_filter.html.erb
@@ -25,7 +25,7 @@
           </div>
         </div>
         <div class="text-center">
-          <button id="validate_btn" class="btn btn-primary btn-round btn-sm" type="button"><i class="material-icons">check</i> Valider</button>
+          <button id="proposal-filter-btn" class="btn btn-primary btn-round btn-sm" type="button"><i class="material-icons">check</i> Valider</button>
         </div>
       </div>
     </div>
