add a comments sorter + fix bug in calculating vote tokens renewel date

--- a/app/views/proposals/_proposal_comments.html.erb
+++ b/app/views/proposals/_proposal_comments.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div id='proposal-comments-container' class="row">
   <div class="col">
     <table class="table table-responsive text-wrap">
       <tbody id='proposal-comments'>
