--- a/app/views/proposals/_debate.html.erb
+++ b/app/views/proposals/_debate.html.erb
@@ -1,4 +1,4 @@
-<div id='debate-space' class = container>
+<div class = 'container debate-space'>
   <br>
   <div class="row">
     <div class="col">
@@ -18,11 +18,11 @@
   </div>
   <br>
   <div class="row">
-    <div class="col-xs-9 col-xs-offset-3 col-sm-8 col-sm-offset-4 col-md-4 col-md-offset-8">
-      <select id="more_filters" class="selectpicker" data-style="btn btn-primary btn-round btn-md" title="Classement de commentaires" data-size="7">
-        <option value="1">Les plus récentes</option>
+    <div class="col-xs col-sm-8 col-sm-offset-4 col-md-4 col-md-offset-8">
+      <select id="comments-sorter" class="selectpicker" data-style="btn btn-primary btn-round btn-md" title="Classement de commentaires" data-size="7">
+        <option value="1">Les plus récents</option>
         <option value="2">Les plus aimés</option>
-        <option value="3">Les plus débattues</option>
+        <option value="3">Les plus commentés</option>
       </select>
     </div>
   </div>
