--- a/app/views/proposals/_proposal_comment_comment.html.erb
+++ b/app/views/proposals/_proposal_comment_comment.html.erb
@@ -1,6 +1,6 @@
 <div id='<%= y.id %>'>
   <br><b><i class="material-icons" style="font-size: 17px">face</i> <%=" " %><%= y.user.first_name %><%= " " %><%= y.user.last_name %></b><br><br>
-  <%= y.content%><br><br>
+  <p class='text-wrap'><%= y.content %></p>
   <small class='text-muted' style='font-style: italic;'>Message posté le <%= y.created_at.to_formatted_s(:short) %></small>
   <%if user_signed_in?%>
     <%if current_user.id == y.user.id %>
