--- a/app/views/proposals/_debate.html.erb
+++ b/app/views/proposals/_debate.html.erb
@@ -1,7 +1,7 @@
 <div class = 'container debate-space'>
   <br>
   <div class="row">
-    <div class="col">
+    <div class="col-xs-12">
       <h3 style='margin-bottom: 0px;'><b>L'espace débat</b></h3><br>
       <%if user_signed_in?%>
         <%= form_tag url_for(proposal_comments_path(@proposal.id)), remote: true do %>
@@ -17,14 +17,16 @@
     </div>
   </div>
   <br>
-  <div class="row">
-    <div class="col-xs col-sm-8 col-sm-offset-4 col-md-4 col-md-offset-8">
-      <select id="comments-sorter" class="selectpicker" data-style="btn btn-primary btn-round btn-md" title="Classement de commentaires" data-size="7">
-        <option value="1">Les plus récents</option>
-        <option value="2">Les plus aimés</option>
-        <option value="3">Les plus commentés</option>
-      </select>
+  <% unless @comments.count == 0 %>
+    <div class="row">
+      <div class="col-xs col-sm-8 col-sm-offset-4 col-md-4 col-md-offset-8">
+        <select id="comments-sorter" class="selectpicker" data-style="btn btn-primary btn-round btn-md" title="Classement de commentaires" data-size="7">
+          <option value="1">Les plus récents</option>
+          <option value="2">Les plus aimés</option>
+          <option value="3">Les plus commentés</option>
+        </select>
+      </div>
     </div>
-  </div>
+  <% end %>
   <%= render 'proposals/proposal_comments', comments: @comments, proposal: @proposal %>
 </div>
