make user profil mobile freindly + make city show title mobile freindly

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -41,6 +41,13 @@ background-color: #FFFFFF !important;
   overflow-wrap: break-word;
 }
 
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 600px) {
+  .text-responsive {
+    font-size: 30px;
+  }
+}
+
 .idea-icon {
   position: relative;
   top: 6px;
