--- a/app/views/cities/_filter.html.erb
+++ b/app/views/cities/_filter.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
       <div class="card box">
-        <div class="card-header card-header-icon" data-background-color="blue">
+        <div class="card-header card-header-icon" data-background-color="blue" style='margin-bottom: 3px;'>
           <i class="material-icons">filter_alt</i>
         </div>
         <div class="card-content">
