--- a/app/views/cities/_vote_informations.html.erb
+++ b/app/views/cities/_vote_informations.html.erb
@@ -1,9 +1,9 @@
 <td class='vote-info text-center'>
   <%if user_signed_in?%>
     <% if is_current_user_owner_of?(x) %>
-      <p class='text-muted text-wrap' style='font-style: italic;'>Vous ne pouvez pas voter pour votre proposition !</p>
+      <p class='text-muted text-wrap text-center' style='font-style: italic;'>Vous ne pouvez pas voter pour votre proposition !</p>
     <% elsif current_user_arent_the_city_of?(x) %>
-      <p class='text-muted text-wrap' style='font-style: italic;'>Vous ne pouvez pas voter pour les propositions en dehors de votre ville !</p>
+      <p class='text-muted text-wrap text-center' style='font-style: italic;'>Vous ne pouvez pas voter pour les propositions en dehors de votre ville !</p>
     <% else %>
       <div id='btns-<%= x.id %>' class='text-center'>
         <%if x.vote_of(current_user)%>
@@ -14,7 +14,7 @@
       </div>
     <% end %>
   <%else%>
-    <p>Connectez-vous pour pouvoir voter !</p>
+    <p class='text-center'>Connectez-vous pour pouvoir voter !</p>
   <%end%>
     <%= render 'cities/votes_count', x: x %>
 </td>
