--- a/app/views/cities/_my_city.html.erb
+++ b/app/views/cities/_my_city.html.erb
@@ -31,7 +31,7 @@
           <div class="card box">
             <div class="card-content">
               <div class="table-responsive">
-                <table id="datatables-1" class="table text-wrap" cellspacing="0" width="100%" style="width:100%">
+                <table class="table datatables-fn text-wrap" cellspacing="0" width="100%" style="width:100%">
                   <thead>
                     <tr>
                       <th class="disabled-sorting"></th>
@@ -68,7 +68,7 @@
           <div class="card box">
             <div class="card-content">
               <div class="table-responsive">
-                <table id="datatables-2" class="table text-wrap" cellspacing="0" width="100%" style="width:100%">
+                <table class="table datatables-fn text-wrap" cellspacing="0" width="100%" style="width:100%">
                   <thead>
                     <tr>
                       <th class="disabled-sorting"></th>
