--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -1,4 +1,3 @@
-
 <br><br>
 <div class="container">
   <div class="row">
@@ -188,17 +187,23 @@
   <div class="col-md-6">
     <h3 class="text-center"><b>Paris</b></h3>
     <div class="card box">
-      <div class="card-content table-responsive table-full-width">
-        <table class="table">
+      <div class="card-content">
+      <div class="table-responsive">
+        <table class="table datatables-s text-wrap" cellspacing="0" width="100%" style="width:100%">
+          <thead>
+            <tr>
+              <th class="disabled-sorting"></th>
+              <th></th>
+            </tr>
+          </thead>
           <tbody>
             <%@proposal_paris.each do |x|%>
             <tr>
-              <td></td>
               <td>
                 <%if x.picture.attached?%>
-                  <%= image_tag x.picture, alt: "Card image", width: 170, style: "height: auto" %>
+                  <%= image_tag x.picture, alt: "Card image", width: 200, style: "height: auto" %>
                 <%else%>
-                  <%= image_tag("home.jpg", width: 170, style: "height: auto")%>
+                  <%= image_tag("home.jpg", width: 200, style: "height: auto")%>
                 <%end%>
               </td>
               <td>
@@ -207,24 +212,31 @@
                   <i class="material-icons" style="font-size: 15px">visibility</i> Voir la proposition
                 </a>
                 <span class="badge"><%= x.category.name %></span>
-              </p>
-            </td>
+                </p>
+              </td>
             </tr>
             <%end%>
           </tbody>
         </table>
+      </div>
       </div>
     </div>
   </div>
   <div class="col-md-6">
     <h3 class="text-center"><b>Lyon</b></h3>
     <div class="card box">
-      <div class="card-content table-responsive table-full-width">
-        <table class="table">
+      <div class="card-content">
+      <div class="table-responsive">
+        <table class="table datatables-s text-wrap" cellspacing="0" width="100%" style="width:100%">
+          <thead>
+            <tr>
+              <th class="disabled-sorting"></th>
+              <th></th>
+            </tr>
+          </thead>
           <tbody>
             <%@proposal_lyon.each do |x|%>
             <tr>
-              <td></td>
               <td>
                 <%if x.picture.attached?%>
                 <%= image_tag Proposal.find(x.id).picture, alt: "Card image",  width: 170, style: "height: auto"%>
@@ -243,6 +255,7 @@
             <%end%>
           </tbody>
         </table>
+      </div>
       </div>
     </div>
   </div>
