--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,17 +2,17 @@
 <br>
 <div class="container">
   <div class="row">
-    <div class="col-xs col-sm-8 col-sm-offset-2">
+    <div class="col-xs col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
       <div class="card card-profile box">
-          <%if @user.avatar.attached?%>
+        <%if @user.avatar.attached?%>
           <div class="card-avatar">
-            <%= image_tag @user.avatar, alt: 'Avatar' , style: "width: 100%;height: auto;"%>
+            <%= image_tag @user.avatar, alt: 'Avatar', style: "width: 100%; height: auto;"%>
           </div>
-          <%else%>
+        <%else%>
           <div class="card-avatar">
             <%= image_tag("avatar.png", style: "width:100%; height: auto;")%> 
           </div>
-          <%end%>
+        <%end%>
         <div class="card-content">
           <h6 class="category text-gray">Mes informations</h6>
           <br>
@@ -25,7 +25,7 @@
             <% else %>
               <% current_user_vote_tokens.times do %>
                 <i class='material-icons text-success' style='font-size: 19px;'>sentiment_satisfied_alt</i>
-              <% end %> <br>
+              <% end %><br>
             <% end %>
           </div>
           <%= link_to "#{@user.city.name}", city_path(@user.city), class: 'btn btn-primary btn-round btn-xs' %>
