--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -78,13 +78,13 @@
   <div class="col-md-3"></div>
     <div class="col-md-6">
       <div class="card">
-        <div class="card-header card-header-icon" data-background-color="blue">
+        <div class="card-header card-header-icon" data-background-color="blue" style='margin-bottom: 10px'>
           <i class="material-icons">delete_outline</i>
         </div>
         <div class="card-content">
           <h4>Suppression du compte</h4>
             <div class="text-center">
-              <p>Êtes vous sûr de vouloir supprimer votre compte? Cette action est irréversible. 
+              <p>Êtes vous sûr de vouloir supprimer votre compte ? Cette action est irréversible. 
               <%= button_to "Supprimer mon compte", registration_path(current_user), data: { confirm: "Êtes-vous certain.e de vouloir supprimer votre compte?" }, method: :delete, class: "btn btn-primary" %>
             </div>
           <div class="col-md-3"></div>
