--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -14,6 +14,7 @@ $(document).ready(function() {
           $('td#' + proposalId).unbind();
           $('td#' + proposalId).click(() => {
             window.setTimeout(function(){
+              console.log($('td#' + proposalId));
               btnsVoteContainer = $('td.child div#btns-' + proposalId);
               btnsVoteContainer.empty();
               btnsVoteContainer.append(delVoteBtn);
