--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -11,6 +11,7 @@ $(document).ready(function() {
           votesCountTag = $('div#lbls-votes-conut-' + proposalId);
           votesCountTag.replaceWith('<%= j render 'cities/votes_count', x: @proposal %>')
 
+          console.log($('td#' + proposalId));
           $('td#' + proposalId).unbind();
           $('td#' + proposalId).click(() => {
             window.setTimeout(function(){
