--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -11,13 +11,11 @@ $(document).ready(function() {
           votesCountTag = $('div#lbls-votes-conut-' + proposalId);
           votesCountTag.replaceWith('<%= j render 'cities/votes_count', x: @proposal %>')
 
-          console.log($('div#' + proposalId));
-          console.log(proposalId);
-          console.log($('td#' + proposalId));
-          $('td#' + proposalId).unbind();
-          $('td#' + proposalId).click(() => {
+          console.log($('td#img-' + proposalId));
+          $('td#img-' + proposalId).unbind();
+          $('td#img-' + proposalId).click(() => {
             window.setTimeout(function(){
-              console.log($('td#' + proposalId));
+              console.log($('td#img-' + proposalId));
               btnsVoteContainer = $('td.child div#btns-' + proposalId);
               btnsVoteContainer.empty();
               btnsVoteContainer.append(delVoteBtn);
