--- a/app/views/cities/_my_city.html.erb
+++ b/app/views/cities/_my_city.html.erb
@@ -1,16 +1,3 @@
-<% @numnow = 0 %>
-<% @numthen = 0 %>
-<% @numvotes = 0 %>
-<% proposals.each do |x| %>
-<%if (x.votes_count >= 5)%>
-<% @numvotes += 1 %>
-<% elsif (x.differencebetween == false) %>
-<% @numnow += 1 %>
-<%else%>
-<% @numthen += 1 %>
-<%end%>
-<%end%>
-
 <br><br>
 <div id=<%= city.id %> class="my-city">
   <div class="container">
@@ -19,7 +6,7 @@
         <h3><b>Personne n'a posté de proposition à <%= city.name %> pour le moment.  Change ça en cliquant sur le bouton :</b></h3>
         <p><%= link_to 'Je veux créer ma proposition', new_proposal_path, class: 'btn btn-primary btn-lg' %></p>
       </div>
-    <%elsif @numnow == 0 %>
+    <%elsif ongoing_proposals.count == 0 %>
       <div class='no-proposal'>
         <h3><b> Aucune proposition en cours à <%= city.name %>. Change ça en cliquant sur le bouton : </b></h3>
         <p><%= link_to 'Je veux créer ma proposition', new_proposal_path, class: 'btn btn-primary btn-lg' %></p>
@@ -40,10 +27,8 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <% proposals.each do |x| %>
-                      <%if (x.differencebetween == false) && (x.votes_count < 5) %>
-                        <%= render 'cities/ongoing_proposal', x: x %>
-                      <%end%>
+                    <% ongoing_proposals.each do |x| %>
+                      <%= render 'cities/ongoing_proposal', x: x %>
                     <%end%>
                   </tbody>
                 </table>
@@ -56,7 +41,7 @@
   </div>
   
   <div id='completed-proposals' class="container">
-    <% if (@numthen == 0) && (@numvotes == 0) %>
+    <% if completed_proposals.count == 0 %>
       <div class='no-proposal'>
         <h3><b>Pas de proposition terminée à <%= city.name %> pour le moment. </b></h3>
         <br><br>
@@ -77,10 +62,8 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <% proposals.each do |x| %>
-                      <% if (x.differencebetween == true) || (x.votes_count >= 5) %>
-                        <%= render 'cities/completed_proposal', x: x %>
-                      <%end%>
+                    <% completed_proposals.each do |x| %>
+                      <%= render 'cities/completed_proposal', x: x %>
                     <%end%>
                   </tbody>
                 </table>
